[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="pymeasware"
version="0.1.0"
description="Lab instruments control"
readme="README.md"
requires-python = ">=3.6"
authors = [
    {name = "Sebastian Ramirez", email = "sebram8@gmail.com"}
]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyvisa",
    "pyvisa-py",
    "psutil",
    "zeroconf"
]